Added tests for all ParcelsController and DeliveriesController methods. Updated DeliveriesController to support hateoas.